--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,111 @@
-{% extends 'layout.html' %}
-{% block body %}
-{% include 'map.html' %}
-{% endblock body %}
+<html>
+
+<head>
+  <script type="text/javascript" src="https://cdn.bokeh.org/bokeh/release/bokeh-2.0.1.min.js"
+    integrity="sha384-JpP8FXbgAZLkfur7LiK3j9AGBhHNIvF742meBJrjO2ShJDhCG2I1uVvW+0DUtrmc"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.bokeh.org/bokeh/release/bokeh-widgets-2.0.1.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.bokeh.org/bokeh/release/bokeh-tables-2.0.1.min.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script type="text/javascript">
+    Bokeh.set_log_level("info");
+  </script>
+
+</head>
+
+<body>
+  <nav class="navbar-expand-md navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Covid19</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Map <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Dashboard<span class="sr-only">(current)</span></a>
+        </li>
+
+      </ul>
+
+    </div>
+  </nav>
+  <div class="container-fluid  m-t-5">
+    <br />
+    <div class="row clearfix">
+      <div class="col-3 col-lg-3 col-md-3 col-sm-12 col-xs-12">
+
+
+        <form action="{{ url_for('index') }}" method="post">
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Departement</label>
+            <select class="form-control" id="departement" name="departement">
+              <option selected value='all'>Tous les departements</option>
+              {% for d in dept.name %}
+              <option>{{d}}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <h5>Centres de sante</h5>
+          <div class="form-check">
+            <input type="checkbox"  class="form-check-input" id="cal" name="cal">
+            <label class="form-check-label" for="cal">Centre Santé avec Lit </label>
+          </div> 
+          <div class="form-check">
+            <input type="checkbox"  class="form-check-input" id="disp" name="disp">
+            <label class="form-check-label" for="disp">Dispensaire </label>
+          </div> 
+          <div class="form-check">
+            <input type="checkbox"  class="form-check-input" id="hosp" name="hosp">
+            <label class="form-check-label" for="hosp">Hopital </label>
+          </div> 
+              
+          <button type="submit" class="btn btn-primary">Lancer</button>
+        </form>
+
+
+
+
+      </div>
+      <div class="col-9">
+        {{ script|safe }}
+        {{ div|safe }}
+      </div>
+    </div>
+<script>
+  let dep = '{{dept_name}}'
+   let disp_checked='{{disp_checked}}';
+   let cal_checked='{{cal_checked}}';
+   let hosp_checked = '{{hosp_checked}}';
+ 
+  $(function(){
+     $('#departement').val(dep)
+     console.log(hosp_checked)
+     disp_checked === 1? $("#disp").prop("checked", true): $("#disp").prop("checked", false);
+     cal_checked === 1? $("#cal").prop("checked", true): $("#cal").prop("checked", false);
+     hosp_checked === 1? $("#hosp").prop("checked", true): $("#hosp").prop("checked", false);
+
+     
+  });
+</script>
+
+
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+
+</body>
+
+</html>
