--- a/templates/index.html
+++ b/templates/index.html
@@ -40,61 +40,106 @@
   <div class="container-fluid  m-t-5">
     <br />
     <div class="row clearfix">
-      <div class="col-3 col-lg-3 col-md-3 col-sm-12 col-xs-12">
+      <div class="col-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
 
+        <div class="row">
+          <div class="col-12">
+            <div class="card">
+              <div class="card-body">
 
+                <h1 style="color:teal; font-size:48px bold;margin:auto; text-align:center; font-weight:bold">Total
+                  Centres de santé </h1>
+                <h1 style="color:teal; font-size:48px bold;margin:auto; text-align:center; font-weight:bold">
+                  {{gdf2.Total_sites.sum().astype('int')}}</h1>
+
+              </div>
+            </div>
+          </div>
+          <br />
+
+        </div>
+        <br/>
         <form action="{{ url_for('index') }}" method="post">
           <div class="form-group">
-            <label for="exampleFormControlSelect1">Departement</label>
-            <select class="form-control" id="departement" name="departement">
-              <option selected value='all'>Tous les departements</option>
-              {% for d in dept.name %}
-              <option>{{d}}</option>
-              {% endfor %}
+            <label for="division">Filtrer la carte par division administrative</label>
+            <select class="form-control" id="division" name="division">
+              <option value='departement'>Departements</option>
+              <option value='commune'>Communes</option>
+              <option value='section communale'>Section Communales</option>
+
             </select>
           </div>
-          <h5>Centres de sante</h5>
-          <div class="form-check">
-            <input type="checkbox"  class="form-check-input" id="cal" name="cal">
-            <label class="form-check-label" for="cal">Centre Santé avec Lit </label>
-          </div> 
-          <div class="form-check">
-            <input type="checkbox"  class="form-check-input" id="disp" name="disp">
-            <label class="form-check-label" for="disp">Dispensaire </label>
-          </div> 
-          <div class="form-check">
-            <input type="checkbox"  class="form-check-input" id="hosp" name="hosp">
-            <label class="form-check-label" for="hosp">Hopital </label>
-          </div> 
-              
+          <div class="form-group">
+            <label for="etablissement">Filtrer les etablissements de sante</label>
+            <select class="form-control" id="etablissement" name="etablissement">
+              <option value='all'>Tous les etablissements</option>
+              <option value="hosp"> Hopitaux </option>
+              <option value="cal"> Centres de santé avec lits </option>
+              <option value="disp"> Dispensaires </option>
+              <option value="disp+cal"> Dispensaires + Centres de santé avec lits </option>
+              <option value="hosp+cal"> Hopitaux + Centres de santé avec lits </option>
+              <option value="hosp+disp"> Hopitaux + Dispensaires </option>
+            </select>
+          </div>
+
+
           <button type="submit" class="btn btn-primary">Lancer</button>
         </form>
+        <br />
+        <div class="row m-t-5">
+          <div class="col-12">
+
+            <h5 class="card-title">Tableau des departements</h5>
+            <hr />
+            <table class="table table-striped table-dark col-12">
+              <thead>
+                <tr>
+                  <th scope="col">Département</th>
+                  <th scope="col">Total des établissements de santé</th>
+                  <th scope="col">Population totale</th>
+                  <th scope="col">Établissement de santé pour 10 000 personnes</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for _,row in gdf2.iterrows()  %}
+                <tr>
+                  <th scope="row">{{row['ADM1_FR']}}</th>
+                  <td>{{row['Total_sites']}}</td>
+                  <td>{{row['IHSI_UNFPA']}}</td>
+                  <td>{{row['health_density']}}</td>
+                </tr>
+                {% endfor %}
+
+
+              </tbody>
+            </table>
+
+
+          </div>
+          
+
+        </div>
 
 
 
 
       </div>
-      <div class="col-9">
-        {{ script|safe }}
-        {{ div|safe }}
+      <div class="col-8">
+        <div clas="col-9">
+          {{ script|safe }}
+          {{ div|safe }}
+        </div>
+
       </div>
     </div>
-<script>
-  let dep = '{{dept_name}}'
-   let disp_checked='{{disp_checked}}';
-   let cal_checked='{{cal_checked}}';
-   let hosp_checked = '{{hosp_checked}}';
- 
-  $(function(){
-     $('#departement').val(dep)
-     console.log(hosp_checked)
-     disp_checked === 1? $("#disp").prop("checked", true): $("#disp").prop("checked", false);
-     cal_checked === 1? $("#cal").prop("checked", true): $("#cal").prop("checked", false);
-     hosp_checked === 1? $("#hosp").prop("checked", true): $("#hosp").prop("checked", false);
+    <script>
 
-     
-  });
-</script>
+      let division = '{{division}}'
+      let etablissement = '{{etablissement}}';
+      $('#division').val(division)
+      $('#etablissement').val(etablissement)
+      
+    </script>
 
 
   </div>
