--- a/templates/index.html
+++ b/templates/index.html
@@ -40,16 +40,15 @@
   <div class="container-fluid  m-t-5">
     <br />
     <div class="row clearfix">
-      <div class="col-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+      <div class="col-4 col-lg-4 col-md-4 col-sm-12">
 
         <div class="row">
           <div class="col-12">
             <div class="card">
               <div class="card-body">
 
-                <h1 style="color:teal; font-size:48px bold;margin:auto; text-align:center; font-weight:bold">Total
-                  Centres de santé </h1>
-                <h1 style="color:teal; font-size:48px bold;margin:auto; text-align:center; font-weight:bold">
+                <h3 style="color:teal; font-size:36px bold;margin:auto; text-align:center; font-weight:bold">Total centres de santé </h1>
+                <h3 style="color:teal; font-size:36px bold;margin:auto; text-align:center; font-weight:bold">
                   {{gdf2.Total_sites.sum().astype('int')}}</h1>
 
               </div>
@@ -58,11 +57,12 @@
           <br />
 
         </div>
-        <br/>
-        <form action="{{ url_for('index') }}" method="post">
+        <br />
+        <form action="{{ url_for('index') }}" method="post" style="font-size: 12px;">
           <div class="form-group">
-            <label for="division">Filtrer la carte par division administrative</label>
+           
             <select class="form-control" id="division" name="division">
+              
               <option value='departement'>Departements</option>
               <option value='commune'>Communes</option>
               <option value='section communale'>Section Communales</option>
@@ -70,53 +70,55 @@
             </select>
           </div>
           <div class="form-group">
-            <label for="etablissement">Filtrer les etablissements de sante</label>
+           
             <select class="form-control" id="etablissement" name="etablissement">
+            
               <option value='all'>Tous les etablissements</option>
               <option value="hosp"> Hopitaux </option>
               <option value="cal"> Centres de santé avec lits </option>
               <option value="disp"> Dispensaires </option>
-              <option value="disp+cal"> Dispensaires + Centres de santé avec lits </option>
-              <option value="hosp+cal"> Hopitaux + Centres de santé avec lits </option>
-              <option value="hosp+disp"> Hopitaux + Dispensaires </option>
             </select>
           </div>
 
 
           <button type="submit" class="btn btn-primary">Lancer</button>
         </form>
-        <br />
+       
         <div class="row m-t-5">
           <div class="col-12">
+            <div class="card">
+              <div class="card-body">
 
-            <h5 class="card-title">Tableau des departements</h5>
-            <hr />
-            <table class="table table-striped table-dark col-12">
-              <thead>
-                <tr>
-                  <th scope="col">Département</th>
-                  <th scope="col">Total des établissements de santé</th>
-                  <th scope="col">Population totale</th>
-                  <th scope="col">Établissement de santé pour 10 000 personnes</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for _,row in gdf2.iterrows()  %}
-                <tr>
-                  <th scope="row">{{row['ADM1_FR']}}</th>
-                  <td>{{row['Total_sites']}}</td>
-                  <td>{{row['IHSI_UNFPA']}}</td>
-                  <td>{{row['health_density']}}</td>
-                </tr>
-                {% endfor %}
-
-
-              </tbody>
-            </table>
+                <h5 class="card-title" style="font-size: 14px;">Tableau de la densité des centres de santé pour 10 000 personnes</h5>
+                <hr />
+                <table class="table table-striped table-dark col-12" style="font-size: 12px;text-align:right">
+                  <thead>
+                    <tr>
+                      <th scope="col">Département</th>
+                      <th scope="col">Centres de santé</th>
+                      <th scope="col">Population</th>
+                      <th scope="col">Centres de santé pour 10K personnes</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% for _,row in gdf2.iterrows()  %}
+                    <tr>
+                      <th scope="row">{{row['ADM1_FR']}}</th>
+                      <td>{{row['Total_sites']}}</td>
+                      <td>{{row['IHSI_UNFPA']}}</td>
+                      <td>{{row['health_density']}}</td>
+                    </tr>
+                    {% endfor %}
 
 
+                  </tbody>
+                </table>
+              </div>
+            </div>
           </div>
-          
+          <br />
+
+
 
         </div>
 
@@ -124,8 +126,8 @@
 
 
       </div>
-      <div class="col-8">
-        <div clas="col-9">
+      <div class="col-8 col-lg-8 col-md-8 col-sm-12">
+        <div clas="col-12 col-lg-12 col-md-12 col-sm-12">
           {{ script|safe }}
           {{ div|safe }}
         </div>
@@ -138,7 +140,7 @@
       let etablissement = '{{etablissement}}';
       $('#division').val(division)
       $('#etablissement').val(etablissement)
-      
+
     </script>
 
 
