--- a/templates/index2.html
+++ b/templates/index2.html
@@ -49,6 +49,7 @@
             /*border-radius: 5px;*/
             line-height: 24px;
             color: #555;
+            width: auto;
         }
 
         .legend h4 {
@@ -205,7 +206,7 @@
         }).addTo(map);
 
         
-        info = new L.Control();
+        info = new L.Control( {position: 'bottomright'});
 
         info.onAdd = function () {
             this._div = L.DomUtil.create("div", "info");
@@ -262,7 +263,7 @@
             layer.on({
                 mouseover: highlightFeature,
                 mouseout: resetHighlight,
-                click: zoomToFeature
+                click: highlightFeature
             });
         }
         
@@ -304,7 +305,7 @@
                         let handleObject = (feature) => typeof (feature) == 'object' ? JSON.stringify(feature) : feature;
                         let fields = toolTips.columns
                         let aliases = toolTips.displays
-                        return '<table style="background-color: white; color: #333333; font-family: arial; font-size: 12px; padding: 10px;">' +
+                        return '<table style="background-color: white; color: #333333; font-family: arial; font-size: 10px; padding: 5px;">' +
                             String(
                                 fields.map(
                                     columnname =>
