--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -7,14 +7,15 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-              <a class="nav-link" href="/">Map <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+            <a class="nav-link" href="/home">Paj akèy<span class="sr-only">(current)</span></a>
+        </li>
+         
+          <li class="nav-item">
+              <a class="nav-link" href="/index2">Kat<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="/index2">Map leaflet<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#">Dashboard<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">Tablo<span class="sr-only">(current)</span></a>
           </li>
 
       </ul>
