--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link" href="/home">Paj akèy<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">Paj akèy<span class="sr-only">(current)</span></a>
         </li>
          
           <li class="nav-item">
