--- a/templates/home.html
+++ b/templates/home.html
@@ -14,9 +14,16 @@
     <script type="text/javascript">
         Bokeh.set_log_level("info");
     </script>
-
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
 </head>
-
+ <style>
+    html,
+    body {
+        padding: 0;
+        margin: 0;
+        font-family:'Poppins', sans-serif;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;
+    }
+ </style>
 
 <body class="docs-page">
     {% include 'include/navbar.html' %}
@@ -63,7 +70,7 @@
                                 eksplike infòmasyon sila.
                                 </p>
                                 <p>
-                                    Zouti a pèmèt jou jwen
+                                    <a href="/index2">Zouti sila<a /> pèmèt jou jwenn
                                 </p>
                                 <ul>
                                     <li>Gwosè ak kantite sant sante ki genyen pou popilasyon pa komin ak depatman</li>
