--- a/templates/home.html
+++ b/templates/home.html
@@ -70,7 +70,7 @@
                                 eksplike infòmasyon sila.
                                 </p>
                                 <p>
-                                    <a href="/index2">Zouti sila<a /> pèmèt jou jwenn
+                                    <a href="/index2">Zouti sila<a  pèmèt jou jwenn
                                 </p>
                                 <ul>
                                     <li>Gwosè ak kantite sant sante ki genyen pou popilasyon pa komin ak depatman</li>
