--- a/templates/home.html
+++ b/templates/home.html
@@ -70,7 +70,7 @@
                                 eksplike infòmasyon sila.
                                 </p>
                                 <p>
-                                    <a href="/index2">Zouti sila<a  pèmèt jou jwenn
+                                    <a href="/index2">Zouti sila<a> pèmèt jou jwenn
                                 </p>
                                 <ul>
                                     <li>Gwosè ak kantite sant sante ki genyen pou popilasyon pa komin ak depatman</li>
@@ -176,15 +176,7 @@
 
             </div>
         </div>
-        <footer class="footer navbar-dark bg-dark"></nav>">
-            <div class="container text-center py-5">
-                <img src="{{url_for('static',filename ='AYITI ANALYTICS_final_variation-14.png')}}" alt="Ayiti Analytics"  height="100px" width="100px">
-                <h4 class="copyright" style="color: whitesmoke;">Tout Dwa revèse &copy; pou  <a href="https://www.ayitianalytics.org/"
-                        target="_blank">Ayiti Analytics</a> pou travay sila</h4>
-              
-                <!--//social-list-->
-            </div>
-        </footer>
+        {% include 'include/footer.html' %}
     </div>
 
 
