--- a/templates/home.html
+++ b/templates/home.html
@@ -64,19 +64,19 @@
                             href="/index2">Zouti sila<a /> nan objektif pou jwenn bon jan enfòmasyon sou sèvis
                             laswenyaj. Li pèmèt nou konnen konbyen sant sante kap bay popilasyon an sèvis laswenyaj nan
                             tout komin ak depatman nan peyi Ayiti. Li mete aklè tout resous laswenyaj ou ka jwenn nan
-                            tout komin ak depatman peyi a.<a href="/index2"> Li <a /> fè sòti konbyen sant sante ou ka
+                            tout komin ak depatman peyi a.<a href="/index2"> Li <a /> montre konbyen sant sante ou ka
                                 jwenn pa komin ou pa depatman
                                 ak tout lòt rezous ki mache avèk domenn laswenyaj ak faktè ekonomik ki pètinan ki
                                 eksplike infòmasyon sila.
                                 </p>
                                 <p>
-                                    <a href="/index2">Zouti sila<a> pèmèt jou jwenn
+                                    <a href="/index2">Zouti sila<a> pèmèt nou jwenn pou yon popilasyon kap viv nan yon lokalite(komin oswa depatman)
                                 </p>
                                 <ul>
-                                    <li>Gwosè ak kantite sant sante ki genyen pou popilasyon pa komin ak depatman</li>
-                                    <li>Kantite kabann lopital ki genyen pou popilasyon pa komin ak depatman</li>
-                                    <li>Pwofesyonèl sante ki genyen pou popilasyon pa komin ak depatman</li>
-                                    <li>Resous ak jefò laswenyaj ki disponib pou popilasyon pa komin ak depatman </li>
+                                    <li>Gwosè ak kantite sant sante ki genyen </li>
+                                    <li>Kantite kabann lopital ki genyen</li>
+                                    <li>Pwofesyonèl sante ki genyen pou</li>
+                                    <li>Resous ak jefò laswenyaj ki disponib</li>
 
                                 </ul>
                     </section>
@@ -84,15 +84,15 @@
                 </article>
                 <article class="docs-article" id="section-1">
 
-                    <h1 class="docs-heading">Definisyon sant ki bay laswanyaj yo</h1>
+                    <h1 class="docs-heading">Definisyon sant ki bay laswenyaj yo</h1>
                     <section class="docs-intro">
 
                         <p>
-                            Sant sante ki bay laswenyaj yo divize an the pilye
+                            Sant sante ki bay laswenyaj yo divize an :
                             <ol>
                                 <li>
 
-                                    <p> Sant sante pa kategori sila yo</p>
+                                    <p> Sant sante pa kategori</p>
                                     <ul>
                                         <li>Sant sante avèk kabann</li>
                                         <li>Sant sante san kabann</li>
@@ -103,7 +103,7 @@
                                 </li>
                                 <li>
 
-                                    <p>Sant sante pa tip sila yo</p>
+                                    <p>Sant sante pa tip</p>
                                     <ul>
                                         <li>Sant sante prive</li>
                                         <li>Sant sante leta</li>
