--- a/templates/home.html
+++ b/templates/home.html
@@ -70,12 +70,12 @@
                                 eksplike infòmasyon sila.
                                 </p>
                                 <p>
-                                    <a href="/index2">Zouti sila<a> pèmèt nou jwenn pou yon popilasyon kap viv nan yon lokalite(komin oswa depatman)
+                                    <a href="/index2">Zouti sila<a> pèmèt nou jwenn pou yon popilasyon kap viv nan yon lokalite (komin oswa depatman)
                                 </p>
                                 <ul>
                                     <li>Gwosè ak kantite sant sante ki genyen </li>
                                     <li>Kantite kabann lopital ki genyen</li>
-                                    <li>Pwofesyonèl sante ki genyen pou</li>
+                                    <li>Pwofesyonèl sante ki genyen</li>
                                     <li>Resous ak jefò laswenyaj ki disponib</li>
 
                                 </ul>
