--- a/templates/index2.html
+++ b/templates/index2.html
@@ -190,12 +190,12 @@
                
                 <div>
                     <button
-                    id="ressetbutton" class="btn btn-primary" style="float: right; margin-bottom:4px;display:block">Relanse
+                    id="ressetbutton" class="btn btn-primary" style="float: right; font-size:75%">Relanse
                     kat la</button>
                 </div>
-                
+                <div>
                 <h5 style="font-size: 16px;font-weight:bold; margin-top:5px">Distribisyon sant sante pa {{title}}</h5>
-
+                </div>
                 <div class="info legend" id="myinfo">
                    
                 </div>
