Total to kantitr

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -108,7 +108,7 @@
 
                                 <h3
                                     style="color:teal; font-size:36px bold;margin:auto; text-align:center; font-weight:bold">
-                                    Total sant sante </h1>
+                                    Kantite sant sante </h1>
                                     <h3
                                         style="color:teal; font-size:46px bold;margin:auto; text-align:center; font-weight:bold">
                                         {{gdf2.Total_sites.sum().astype('int')}}</h1>
