--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar-expand-md navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="/"> <img src="{{url_for('static',filename ='AYITI ANALYTICS_final_variation-14.png')}}" alt="Ayiti Analytics"  height="100px" width="100px"> Zouti Laswenyaj</a>
+  <a class="navbar-brand" href="/"> <img src="{{url_for('static',filename ='AYITI ANALYTICS_final_variation-14.png')}}" alt="Ayiti Analytics"  height="100px" width="100px"><span  id="site_name"> Zouti Laswenyaj</span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,17 +8,29 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link" href="/">Paj akèy<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/" id="home">Paj akèy<span class="sr-only">(current)</span></a>
         </li>
          
           <li class="nav-item">
-              <a class="nav-link" href="/index2">Kat entèaktif<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/index2" id ="map_title">Kat entèaktif<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Tablo<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#" id="dashboard">Tablo<span class="sr-only">(current)</span></a>
           </li>
 
       </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <select class="form-control" id="translation" name="translation">
+                <option value='kr'>Kreyòl</option>
+                <option value='en'>Enghish</option>
+                
 
+            </select>
+        </li>
+         
+         
+
+      </ul>
   </div>
 </nav>
