--- a/templates/index2.html
+++ b/templates/index2.html
@@ -19,15 +19,15 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <!-- Google Font -->
-        <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
-    
-        <!-- FontAwesome JS-->
-        
-        <script defer src="{{ url_for('static', filename='assets/fontawesome/js/all.min.js') }}"></script>
-    
-        <!-- Theme CSS -->  
-        
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
+
+    <!-- FontAwesome JS-->
+
+    <script defer src="{{ url_for('static', filename='assets/fontawesome/js/all.min.js') }}"></script>
+
+    <!-- Theme CSS -->
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -58,7 +58,9 @@
         body {
             padding: 0;
             margin: 0;
-            font-family:'Poppins', sans-serif;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;
+            font-family: 'Poppins', sans-serif;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
         }
 
         html,
@@ -68,9 +70,9 @@
             width: 100%;
         }
 
-     
 
-        
+
+
 
         .legend span {
             position: relative;
@@ -89,15 +91,14 @@
             background-size: 18px;
             background-color: rgba(255, 255, 255, 1);
         }
-       
     </style>
 </head>
 
 <body>
     {% include 'include/navbar.html' %}
-    
+
     <div class="container-fluid  m-t-5">
-       
+
         <div class="row clearfix">
             <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
 
@@ -106,12 +107,12 @@
                         <div class="card">
                             <div class="card-body">
 
-                                <h3
-                                    style="color:teal; font-size:36px bold;margin:auto; text-align:center; font-weight:bold">
-                                    Kantite sant sante </h1>
-                                    <h3
-                                        style="color:teal; font-size:46px bold;margin:auto; text-align:center; font-weight:bold">
-                                        {{gdf2.Total_sites.sum().astype('int')}}</h1>
+                                <h3 style="color:teal; font-size:36px bold;margin:auto; text-align:center; font-weight:bold"
+                                    id="all_sites">
+                                    Kantite sant sante </h3>
+                                <h1
+                                    style="color:teal; font-size:46px bold;margin:auto; text-align:center; font-weight:bold">
+                                    {{gdf2.Total_sites.sum().astype('int')}}</h1>
 
                             </div>
                         </div>
@@ -144,21 +145,22 @@
                     </div>
 
 
-                    <button type="submit" class="btn btn-primary">Lanse</button>
+                    <button type="submit" class="btn btn-primary" id="button_1_text">Lanse</button>
                 </form>
                 <br />
                 <div class="row m-t-5">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-                        <h5 class="card-title" style="font-size: 14px;">Tablo dansite sant sante pou 10 000 moun</h5>
+                        <h5 class="card-title" style="font-size: 14px;" id="table_tilte">Tablo dansite sant sante pou 10
+                            000 moun</h5>
                         <hr />
                         <table class="table table-striped table-dark col-12" style="font-size: 12px;text-align:right">
                             <thead>
                                 <tr>
-                                    <th scope="col">Depatman</th>
-                                    <th scope="col">Sant sante</th>
-                                    <th scope="col">Popilasyon</th>
-                                    <th scope="col">Sant sante pou 10,000 moun</th>
+                                    <th scope="col" id="departement">Depatman</th>
+                                    <th scope="col" id="health_fac">Sant sante</th>
+                                    <th scope="col" id="population">Popilasyon</th>
+                                    <th scope="col" id="density">Sant sante pou 10,000 moun</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -187,17 +189,17 @@
 
             </div>
             <div class="col-lg-8 col-md-12 col-sm-12" style="margin-top:2px;">
-               
+
                 <div>
-                    <button
-                    id="ressetbutton" class="btn btn-primary" style="float: right; font-size:75%">Relanse
-                    kat la</button>
+                    <button id="ressetbutton" class="btn btn-primary" style="float: right; font-size:75%">Relanse
+                        kat la</button>
                 </div>
                 <div>
-                <h5 style="font-size: 16px;font-weight:bold; margin-top:5px">Distribisyon sant sante pa {{title}}</h5>
+                    <h5 style="font-size: 16px;font-weight:bold; margin-top:5px" id="legend_title">Distribisyon sant
+                        sante pa {{title}}</h5>
                 </div>
                 <div class="info legend" id="myinfo">
-                   
+
                 </div>
                 <div id="map" style="height: 90vh;">
 
@@ -211,6 +213,31 @@
     {% include 'include/footer.html' %}
     <script>
 
+
+
+        let lang_ = localStorage.getItem('lang')
+        let translator = null
+        let translation = $('#translation')
+        translation.val(lang_)
+        $.get('/language/' + translation.val())
+            .done(
+                reponse => {
+                    translator = JSON.parse(reponse)
+                    translate()
+                }
+            );
+        translation.change(function () {
+            $.get('/language/' + translation.val())
+                .done(
+                    reponse => {
+                        translator = JSON.parse(reponse)
+                        translate()
+
+                    }
+                );
+        }
+        )
+
         let division = '{{division}}'
         let etablissement = '{{etablissement}}';
         let tool = '{{tool_tips|tojson}}'
@@ -220,28 +247,28 @@
         console.log(pal)
         let palette = jQuery.parseJSON(pal)
         toolTips = jQuery.parseJSON(tool)
-       
-   
+
+
         div = $("#myinfo")[0]
-       
+
         grades = palette.values,
-        labels = [];
+            labels = [];
 
-    // loop through our density intervals and generate a label with a colored square for each interval
-    // first loop for colored legend boxes
-    for (var i = 0; i < grades.length; i++) {
-        div.innerHTML +=
-            '<span style="background:' +palette.color[i] + '"></span> ';
-    }
+        // loop through our density intervals and generate a label with a colored square for each interval
+        // first loop for colored legend boxes
+        for (var i = 0; i < grades.length; i++) {
+            div.innerHTML +=
+                '<span style="background:' + palette.color[i] + '"></span> ';
+        }
 
-    // a line break
-    div.innerHTML += '<br>';
+        // a line break
+        div.innerHTML += '<br>';
 
-    // second loop for text
-    for (var i = 0; i < grades.length; i++) {
-        div.innerHTML +=
-            '<label>' + grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] : '+') + '</label>';
-    }
+        // second loop for text
+        for (var i = 0; i < grades.length; i++) {
+            div.innerHTML +=
+                '<label>' + grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] : '+') + '</label>';
+        }
 
 
 
@@ -342,15 +369,15 @@
             });
         }
 
-        map.on('click', function() {
+        map.on('click', function () {
             if (map.scrollWheelZoom.enabled()) {
-              map.scrollWheelZoom.disable();
-              }
-              else {
-              map.scrollWheelZoom.enable();
-              }
-            });
-
+                map.scrollWheelZoom.disable();
+            }
+            else {
+                map.scrollWheelZoom.enable();
+            }
+        });
+        
 
         $.get('/api/v1/' + division + '/' + etablissement)
             .done(response => {
@@ -390,6 +417,157 @@
 
 
 
+
+        function translate() {
+            if (translation.val() === 'en') {
+                localStorage.setItem('lang', 'en')
+                // navbar translation
+                let site_name = $('#site_name')[0];
+                site_name.innerHTML = translator.en.site_name;
+                let home = $('#home')[0];
+                home.innerHTML = translator.en.home;
+                let map_title = $('#map_title')[0];
+                map_title.innerHTML = translator.en.map;
+                let dashboard = $('#dashboard')[0];
+                dashboard.innerHTML = translator.en.dashboard
+                let all_sites = $("#all_sites")[0]
+                all_sites.innerHTML = translator.en.all_sites
+
+                $('#division option[value="departement"]').text(translator.en.departement)
+                $('#division option[value="commune"]').text(translator.en.commune)
+
+
+                $('#etablissement option[value="all"]').text(translator.en.health_fac)
+                $('#etablissement option[value="hosp"]').text(translator.en.hospital)
+                $('#etablissement option[value="cal"]').text(translator.en.fac_with_bed)
+                $('#etablissement option[value="csl"]').text(translator.en.fac_without_bed)
+                $('#etablissement option[value="disp"]').text(translator.en.dispensary)
+                $('#button_1_text').text(translator.en.button_1_text)
+
+
+                let table_tilte = $("#table_tilte")[0]
+                table_tilte.innerHTML = translator.en.table_tilte
+
+                let departement = $("#departement")[0]
+                departement.innerHTML = translator.en.departement
+
+                let health_fac = $("#health_fac")[0]
+                health_fac.innerHTML = translator.en.health_fac
+
+                let population = $("#population")[0]
+                population.innerHTML = translator.en.population
+
+                let density = $("#density")[0]
+                density.innerHTML = translator.en.density
+
+                $('#ressetbutton').text(translator.en.ressetbutton)
+
+
+                let legend_title = $("#legend_title")[0]
+                legend_title.innerHTML = division === 'departement'? translator.en.legend_title+ " "+"departement": translator.en.legend_title+ " "+"commune"
+
+                let right = $('#right')[0];
+                right.innerHTML = translator.en.right + " &copy;";
+                toolTips.displays =  []
+                if (division === 'departement'){
+                    toolTips.displays.push(translator.en.dept)
+
+                } else{
+                    toolTips.displays.push(translator.en.dept)
+                    toolTips.displays.push(translator.en.com)
+                }
+
+               switch(etablissement){
+                   case 'all':  toolTips.displays.push(translator.en.dispensary);
+                                toolTips.displays.push(translator.en.hospital);
+                                toolTips.displays.push(translator.en.fac_with_bed);
+                                toolTips.displays.push(translator.en.fac_without_bed);break;
+
+                   case 'hosp':  toolTips.displays.push(translator.en.hospital);break;
+                   case 'cal':  toolTips.displays.push(translator.en.fac_with_bed);break
+                   case 'disp':  toolTips.displays.push(translator.en.dispensary);break;
+                   case 'csl':  toolTips.displays.push(translator.en.fac_without_bed);break;
+                  
+                   
+               }
+               toolTips.displays.push(translator.en.total_site)
+            } else {
+
+                localStorage.setItem('lang', 'kr')
+                let site_name = $('#site_name')[0];
+                site_name.innerHTML = translator.kr.site_name;
+                let home = $('#home')[0];
+                home.innerHTML = translator.kr.home;
+                let map_title = $('#map_title')[0];
+                map_title.innerHTML = translator.kr.map;
+                let dashboard = $('#dashboard')[0];
+                dashboard.innerHTML = translator.kr.dashboard
+
+                let all_sites = $("#all_sites")[0]
+                all_sites.innerHTML = translator.kr.all_sites
+
+                $('#division option[value="departement"]').text(translator.kr.departement)
+                $('#division option[value="commune"]').text(translator.kr.commune)
+
+
+                $('#etablissement option[value="all"]').text(translator.kr.health_fac)
+                $('#etablissement option[value="hosp"]').text(translator.kr.hospital)
+                $('#etablissement option[value="cal"]').text(translator.kr.fac_with_bed)
+                $('#etablissement option[value="csl"]').text(translator.kr.fac_without_bed)
+                $('#etablissement option[value="disp"]').text(translator.kr.dispensary)
+                $('#button_1_text').text(translator.kr.button_1_text)
+
+
+                let table_tilte = $("#table_tilte")[0]
+                table_tilte.innerHTML = translator.kr.table_tilte
+
+                let departement = $("#departement")[0]
+                departement.innerHTML = translator.kr.departement
+
+                let health_fac = $("#health_fac")[0]
+                health_fac.innerHTML = translator.kr.health_fac
+
+                let population = $("#population")[0]
+                population.innerHTML = translator.kr.table_tilte
+
+                let density = $("#density")[0]
+                density.innerHTML = translator.kr.density
+
+                $('#ressetbutton').text(translator.kr.ressetbutton)
+
+
+                let legend_title = $("#legend_title")[0]
+                legend_title.innerHTML = translator.kr.legend_title + " "+  '{{title}}'
+
+                let right = $('#right')[0];
+                right.innerHTML = translator.kr.right + " &copy;";
+
+               
+                toolTips.displays =  []
+                if (division === 'departement'){
+                    toolTips.displays.push(translator.kr.dept)
+
+                } else{
+                    toolTips.displays.push(translator.kr.dept)
+                    toolTips.displays.push(translator.kr.com)
+                }
+
+               switch(etablissement){
+                   case 'all':  toolTips.displays.push(translator.kr.dispensary);
+                                toolTips.displays.push(translator.kr.hospital);
+                                toolTips.displays.push(translator.kr.fac_with_bed);
+                                toolTips.displays.push(translator.kr.fac_without_bed);break;
+
+                   case 'hosp':  toolTips.displays.push(translator.kr.hospital);break;
+                   case 'cal':  toolTips.displays.push(translator.kr.fac_with_bed);break
+                   case 'disp':  toolTips.displays.push(translator.kr.dispensary);break;
+                   case 'csl':  toolTips.displays.push(translator.kr.fac_without_bed);break;
+                  
+                   
+               }
+               toolTips.displays.push(translator.kr.total_site)
+            }
+        }
 
 
 
