--- a/templates/index2.html
+++ b/templates/index2.html
@@ -215,7 +215,7 @@
 
 
 
-        let lang_ = localStorage.getItem('lang')
+        let lang_ =localStorage.getItem('lang') === null? 'kr':localStorage.getItem('lang')
         let translator = null
         let translation = $('#translation')
         translation.val(lang_)
