correction english word

--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -23,7 +23,7 @@
         <li class="nav-item">
             <select class="form-control" id="translation" name="translation">
                 <option value='kr'>Kreyòl</option>
-                <option value='en'>Enghish</option>
+                <option value='en'>English</option>
                 
 
             </select>
