Last text modification

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -437,7 +437,7 @@
                 $('#division option[value="commune"]').text(translator.en.commune)
 
 
-                $('#etablissement option[value="all"]').text(translator.en.health_fac)
+                $('#etablissement option[value="all"]').text(translator.en.total_site)
                 $('#etablissement option[value="hosp"]').text(translator.en.hospital)
                 $('#etablissement option[value="cal"]').text(translator.en.fac_with_bed)
                 $('#etablissement option[value="csl"]').text(translator.en.fac_without_bed)
@@ -510,7 +510,7 @@
                 $('#division option[value="commune"]').text(translator.kr.commune)
 
 
-                $('#etablissement option[value="all"]').text(translator.kr.health_fac)
+                $('#etablissement option[value="all"]').text(translator.kr.all_sites)
                 $('#etablissement option[value="hosp"]').text(translator.kr.hospital)
                 $('#etablissement option[value="cal"]').text(translator.kr.fac_with_bed)
                 $('#etablissement option[value="csl"]').text(translator.kr.fac_without_bed)
