--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar-expand-md navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="/"> <img src="{{url_for('static',filename ='AYITI ANALYTICS_final_variation-14.png')}}" alt="Ayiti Analytics"  height="100px" width="100px"><span  id="site_name"> Zouti Laswenyaj</span></a>
+  <a class="navbar-brand" href="/index2"> <img src="{{url_for('static',filename ='AYITI ANALYTICS_final_variation-14.png')}}" alt="Ayiti Analytics"  height="100px" width="100px"><span  id="site_name"> Zouti Laswenyaj</span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
