--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -14,10 +14,11 @@
           <li class="nav-item">
               <a class="nav-link" href="/index2" id ="map_title">Kat entèaktif<span class="sr-only">(current)</span></a>
           </li>
+          <!--
           <li class="nav-item">
-              <a class="nav-link" href="#" id="dashboard">Tablo<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/dashboard" id="dashboard">Tablo<span class="sr-only">(current)</span></a>
           </li>
-
+-->
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
